@@ -5,8 +5,8 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 4
-SUBLEVEL = 16
-EXTRAVERSION =b
+SUBLEVEL = 17
+EXTRAVERSION =
 #NAME=Zonked Quokka
 
 # *DOCUMENTATION*
